--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,3 +1,34 @@
 /* styles.css */
-h1 {
-  color: blue; }
+body {
+  font-family: "Josefin Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+
+header {
+  background-color: #03408B;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+
+nav > ul {
+  display: flex;
+  justify-content: center;
+  text-align: center; }
+
+nav > ul > li {
+  list-style: none;
+  text-decoration: none;
+  padding: 25px 15px;
+  width: 120px; }
+
+.menu-item > a {
+  text-decoration: none;
+  color: white; }
+  .menu-item > a:hover {
+    color: #80FF97; }
+  .menu-item > a.active {
+    color: #636363; }
+
+.hero {
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
+
+.logo {
+  width: 150px; }
