--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -5,11 +5,11 @@ $grey: #636363;
 $orchid: #D966E1;
 $faded-lime: #80FF97;
 $palm-leaf: #153D13;
-$congress-blue: rgba(2, 18, 137, 0.95);
+$deep-ocean: #0D2746;
 $transparent: rgba(0,0,0,0);
 
-$body-fonts: 'Josefin Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif; 
-$display-fonts: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$body-fonts: 'GothamRounded-Book', 'Helvetica Neue', Helvetica, Arial, sans-serif; 
+$display-fonts: 'GothamRounded-Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $title-size: 3em;
 $title-weight: 200;
 
@@ -19,26 +19,42 @@ $title-weight: 200;
     font-weight: $title-weight;
     color: $white;
 }
-    
+
 body {
     font-family: $body-fonts;
-    color: $congress-blue;
+    background-color: $deep-ocean;
+    color: $faded-lime;
+    font-size: 1em;
+    font-weight: 400;
+    line-height: 1.75em;
+}
+
+a {
+    color: $orchid;
 }
 
 h1 {
-    @include title($display-fonts, $white, $title-size, $title-weight)
+    @include title($display-fonts, $white, $title-size, $title-weight);
+    margin: 40px 0;
+}
+
+h2 {
+    @include title($display-fonts, inherit, 1.75em, $title-weight)
+    padding: 10px 15px;
 }
 
 header {
-    background: linear-gradient($congress-blue, $congress-blue), url("../images/scotland.png");
+    background: linear-gradient($deep-ocean, $deep-ocean), url("../images/scotland.png");
     background-size: cover;
     font-family: $display-fonts;
+    padding-bottom: 75px;
 }
 
 nav > ul {
     display: flex;
     justify-content: center;
     text-align: center;
+    flex-flow: row wrap;
 }
 
 nav >  ul > li {
@@ -67,26 +83,36 @@ nav >  ul > li {
 }
 
 .hero {
-    height: 500px;
+    height: auto;
 }
 
-.logo, h1 {
+.splash, h1 {
     flex: 1 100%;
     display: flex;
+    flex-flow: column;
+    align-items: center;
     justify-content: center;
 }
 
 .info-buttons {
     flex: 1 100%;
+    margin-bottom: 50px;
 }
 
-.logo > object {
-    width: 150px;
-    height: 150px;
-    margin-top: 100px
+.splash {
+    margin-top: 70px;
+    .logo {
+        width: 185px;
+    }
+    .title {
+        width: 500px;
+        height: 150px;
+        margin: 70px 0;
+    }
 }
 
-button {
+button, 
+.button {
     height: 45px;
     width: 200px;
     border-radius: 7px;
@@ -94,7 +120,7 @@ button {
     background-color: $faded-lime;
     box-shadow: 0 5px 0 darken($faded-lime, 50%);
     margin: 0 15px;
-    color: $congress-blue;
+    color: $deep-ocean;
     font-family: $body-fonts;
     font-size: 1em;
     &.secondary {
@@ -113,15 +139,56 @@ button {
 
 }
 
-.when {
-    background: $white;
+#mc_embed_signup {
+    width: 600px;
+    height: 300px;
+    background-color: $white;
+    border-radius: 10px;
+    box-shadow: 0 3px 5px darken($deep-ocean, 75%);
+    #mc_embed_signup_scroll {
+        width: 100%;
+        color: $deep-ocean;
+    }
+    .mailer-subscribe {
+        float: left;
+    }
+    .indicates-required {
+        float:right;
+        margin: 10px 15px;
+    }
+    .asterisk {
+        color: red;
+    }
+    .mc-field-group {
+        width: 100%;
+        margin-bottom: 20px;
+        margin-left: 25px;
+        label {
+            // float: left;
+            width: 500px;
+        }
+        input {
+            // float: right;
+            height: 30px;
+            width: 200px;
+            border: 1px solid darken($faded-lime, 33%);
+            border-radius: 10px;
+            outline: none;
+        }
+    }
+    .button {
+        float: right;
+    }
+}
+
+.what {
     display: flex;
-    flex-direction: row;
-    flex-flow: row wrap;
-    h2 {
-        flex: 1 100%;
-    }
+    justify-content: center;
+    text-align: center;
     div {
-        display: flex;
+        width: 35%;
     }
+}
+
+@media screen and (max-width: 600px) {
 }
