--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -17,13 +17,6 @@ h1 {
   color: #ffffff;
   margin: 40px 0; }
 
-h2 {
-  font-family: "GothamRounded-Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 1.75em;
-  font-weight: 200;
-  color: inherit;
-  padding: 10px 15px; }
-
 header {
   background: linear-gradient(#0D2746, #0D2746), url("../images/scotland.png");
   background-size: cover;
@@ -107,34 +100,68 @@ button,
 
 #mc_embed_signup {
   width: 600px;
-  height: 300px;
+  height: auto;
+  padding-bottom: 25px;
   background-color: #ffffff;
   border-radius: 10px;
-  box-shadow: 0 3px 5px black; }
+  box-shadow: 0 5px 15px black; }
   #mc_embed_signup #mc_embed_signup_scroll {
     width: 100%;
     color: #0D2746; }
   #mc_embed_signup .mailer-subscribe {
     float: left; }
+  #mc_embed_signup h2 {
+    font-family: "GothamRounded-Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 1.75em;
+    font-weight: 200;
+    color: inherit;
+    padding: 20px 0 35px 0;
+    width: 100%;
+    text-align: center;
+    display: block; }
   #mc_embed_signup .indicates-required {
-    float: right;
-    margin: 10px 15px; }
+    height: auto;
+    text-align: right;
+    margin-right: 75px;
+    padding-bottom: 20px;
+    display: block; }
   #mc_embed_signup .asterisk {
     color: red; }
   #mc_embed_signup .mc-field-group {
     width: 100%;
-    margin-bottom: 20px;
-    margin-left: 25px; }
+    margin-bottom: 20px; }
+    #mc_embed_signup .mc-field-group.initial {
+      padding-top: 25px; }
     #mc_embed_signup .mc-field-group label {
-      width: 500px; }
+      width: 500px;
+      margin-left: 75px; }
     #mc_embed_signup .mc-field-group input {
       height: 30px;
-      width: 200px;
+      width: 300px;
       border: 1px solid #00d727;
-      border-radius: 10px;
-      outline: none; }
+      border-radius: 5px;
+      outline: none;
+      float: right;
+      margin-right: 75px;
+      font-family: "GothamRounded-Book", "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 1em;
+      text-indent: 10px;
+      color: #D966E1; }
+    #mc_embed_signup .mc-field-group ::-webkit-input-placeholder {
+      color: #f3d1f6;
+      text-indent: 10px; }
+    #mc_embed_signup .mc-field-group :-moz-placeholder {
+      color: #f3d1f6;
+      text-indent: 10px; }
+    #mc_embed_signup .mc-field-group ::-moz-placeholder {
+      color: #f3d1f6;
+      text-indent: 10px; }
+    #mc_embed_signup .mc-field-group :-ms-input-placeholder {
+      color: #f3d1f6;
+      text-indent: 10px; }
   #mc_embed_signup .button {
-    float: right; }
+    float: right;
+    margin-right: 75px; }
 
 .what {
   display: flex;
