--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -145,9 +145,11 @@ button,
     width: 600px;
     height: auto;
     padding-bottom: 25px;
-    background-color: $white;
+    background-color: $deep-ocean;
     border-radius: 10px;
     box-shadow: 0 5px 15px darken($deep-ocean, 75%);
+    overflow: hidden;
+
     #mc_embed_signup_scroll {
         width: 100%;
         color: $deep-ocean;
@@ -155,24 +157,27 @@ button,
     .mailer-subscribe {
         float: left;
     }
-    h2 {
-        @include title($display-fonts, inherit, 1.75em, $title-weight)
-        padding: 20px 0 35px 0;
+    .signup-header {
+        background-color: $orchid;
+        height: 70px;
         width: 100%;
-        text-align: center;
-        display: block;
+        h2 {
+            @include title($display-fonts, inherit, 1.75em, $title-weight)
+            padding: 20px 0 35px 0;
+            width: 100%;
+            color: $white;
+            text-align: center;
+            display: block;
+        }
     }
+    
     .indicates-required {
         height: auto;
-        // width: 100%;
         text-align: right;
         margin-right: 75px;
         padding-bottom: 20px;
         display: block;
-        // ::before {
-        //     content: "";
-        //     clear: both;
-        // }
+        color: $white;
     }
     .asterisk {
         color: red;
@@ -180,7 +185,8 @@ button,
     .mc-field-group {
         width: 100%;
         margin-bottom: 20px;
-        // margin-left: 25px;
+        color: $white;
+
         &.initial {
             padding-top: 25px;
         }
@@ -192,7 +198,7 @@ button,
         input {
             height: 30px;
             width: 300px;
-            border: 1px solid darken($faded-lime, 33%);
+            border: none;
             border-radius: 5px;
             outline: none;
             float: right;
