--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -17,11 +17,13 @@ h1 {
   color: #ffffff;
   margin: 40px 0; }
 
+p {
+  margin-top: 25px; }
+
 header {
   background: linear-gradient(#0D2746, #0D2746), url("../images/scotland.png");
   background-size: cover;
-  font-family: "GothamRounded-Light", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  padding-bottom: 75px; }
+  font-family: "GothamRounded-Light", "Helvetica Neue", Helvetica, Arial, sans-serif; }
 
 nav > ul {
   display: flex;
@@ -87,7 +89,7 @@ button,
   button.secondary,
   .button.secondary {
     background-color: transparent;
-    border: 1px solid #01ff2f;
+    border: 1px solid #4dff6d;
     color: #ffffff; }
   button:active,
   .button:active {
@@ -98,6 +100,25 @@ button,
     box-shadow: none;
     transform: translateY(5px); }
 
+.overlay {
+  background-color: #0D2746;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.75;
+  z-index: 0;
+  visibility: hidden;
+  height: 100vh;
+  width: 100%; }
+  .overlay .close-button {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    height: 30px;
+    width: 30px; }
+
 #mc_embed_signup {
   width: 600px;
   height: auto;
@@ -105,7 +126,14 @@ button,
   background-color: #0D2746;
   border-radius: 10px;
   box-shadow: 0 5px 15px black;
-  overflow: hidden; }
+  overflow: hidden;
+  position: absolute;
+  visibility: hidden;
+  top: 35vh;
+  left: -2000;
+  right: 0;
+  margin: auto;
+  z-index: 10; }
   #mc_embed_signup #mc_embed_signup_scroll {
     width: 100%;
     color: #0D2746; }
@@ -171,9 +199,9 @@ button,
     float: right;
     margin-right: 75px; }
 
-.what {
+main {
   display: flex;
   justify-content: center;
   text-align: center; }
-  .what div {
+  main div {
     width: 35%; }
