--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -45,11 +45,15 @@ h1 {
     margin: 40px 0;
 }
 
+p {
+    margin-top::25px;
+}
+
 header {
     background: linear-gradient($deep-ocean, $deep-ocean), url("../images/scotland.png");
     background-size: cover;
     font-family: $display-fonts;
-    padding-bottom: 75px;
+    // padding-bottom: 75px;
 }
 
 nav > ul {
@@ -127,7 +131,7 @@ button,
     font-size: 1em;
     &.secondary {
         background-color: $transparent;
-        border: 1px solid darken($faded-lime, 25%);
+        border: 1px solid darken($faded-lime, 10%);
         color: $white;
     }
     &:active {
@@ -141,6 +145,27 @@ button,
 
 }
 
+.overlay {
+    background-color: $deep-ocean;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    opacity: 0.75;
+    z-index: 0;
+    visibility: hidden;
+    height: 100vh;
+    width: 100%;
+    .close-button {
+        position: absolute;
+        top: 30px;
+        right: 30px;
+        height: 30px;
+        width: 30px;
+    }
+}
+
 #mc_embed_signup {
     width: 600px;
     height: auto;
@@ -149,6 +174,13 @@ button,
     border-radius: 10px;
     box-shadow: 0 5px 15px darken($deep-ocean, 75%);
     overflow: hidden;
+    position: absolute;
+    visibility: hidden;
+    top: 35vh;
+    left: -2000;
+    right: 0;
+    margin: auto;
+    z-index: 10;
 
     #mc_embed_signup_scroll {
         width: 100%;
@@ -220,7 +252,7 @@ button,
     }
 }
 
-.what {
+main {
     display: flex;
     justify-content: center;
     text-align: center;
@@ -228,6 +260,7 @@ button,
         width: 35%;
     }
 }
+
 
 @media screen and (max-width: 600px) {
 }
