--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -4,16 +4,22 @@ $white: #ffffff;
 $grey: #636363;
 $orchid: #D966E1;
 $faded-lime: #80FF97;
-$palm-leaf: #153D13;
-$deep-ocean: #0D2746;
-$transparent: rgba(0,0,0,0);
-
-$body-fonts: 'GothamRounded-Book', 'Helvetica Neue', Helvetica, Arial, sans-serif; 
-$display-fonts: 'GothamRounded-Light', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$green: #00801D;
+$blue-zodiac: #0D2746;
+$transparent: rgba(0, 0, 0, 0);
+$body-fonts: 'GothamRounded-Book',
+'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif;
+$display-fonts: 'GothamRounded-Light',
+'Helvetica Neue',
+Helvetica,
+Arial,
+sans-serif;
 $title-size: 3em;
 $title-weight: 200;
-
-@mixin title($display-fonts, $white, $title-size, $title-weight){
+@mixin title($display-fonts, $white, $title-size, $title-weight) {
     font-family: $display-fonts;
     font-size: $title-size;
     font-weight: $title-weight;
@@ -21,19 +27,34 @@ $title-weight: 200;
 }
 
 @mixin placeholder {
-  ::-webkit-input-placeholder {@content}
-  :-moz-placeholder           {@content}
-  ::-moz-placeholder          {@content}
-  :-ms-input-placeholder      {@content}  
+    ::-webkit-input-placeholder {
+        @content
+    }
+    :-moz-placeholder {
+        @content
+    }
+    ::-moz-placeholder {
+        @content
+    }
+    :-ms-input-placeholder {
+        @content
+    }
 }
 
 body {
     font-family: $body-fonts;
-    background-color: $deep-ocean;
+    background-color: $blue-zodiac;
     color: $faded-lime;
     font-size: 1em;
     font-weight: 400;
     line-height: 1.75em;
+}
+
+button,
+.button,
+a,
+.close-button {
+    cursor: pointer;
 }
 
 a {
@@ -46,14 +67,22 @@ h1 {
 }
 
 p {
-    margin-top::25px;
+    margin-top: 25px;
 }
 
 header {
-    background: linear-gradient($deep-ocean, $deep-ocean), url("../images/scotland.png");
-    background-size: cover;
     font-family: $display-fonts;
-    // padding-bottom: 75px;
+    .window {
+        position: absolute;
+        z-index: -10;
+        top: 12vh;
+        left: 0;
+        right: 0;
+        margin: auto;
+        opacity: 0.3;
+        min-width: 150px;
+        max-width: 500px;
+    }
 }
 
 nav > ul {
@@ -63,7 +92,7 @@ nav > ul {
     flex-flow: row wrap;
 }
 
-nav >  ul > li {
+nav > ul > li {
     list-style: none;
     text-decoration: none;
     padding: 25px 15px;
@@ -71,17 +100,19 @@ nav >  ul > li {
 }
 
 .menu-item > a {
-  text-decoration: none;
-  color: white;
-  &:hover {
-    color: $faded-lime;
-  }
-  &.active { //this needs additional js to work
-    color: $grey;
-  }
+    text-decoration: none;
+    color: white;
+    &:hover {
+        color: $faded-lime;
+    }
+    &.active {
+        //this needs additional js to work
+        color: $grey;
+    }
 }
 
-.hero, .info-buttons {
+.hero,
+.info-buttons {
     display: flex;
     flex-direction: row;
     flex-flow: row wrap;
@@ -92,7 +123,8 @@ nav >  ul > li {
     height: auto;
 }
 
-.splash, h1 {
+.splash,
+h1 {
     flex: 1 100%;
     display: flex;
     flex-flow: column;
@@ -108,25 +140,24 @@ nav >  ul > li {
 .splash {
     margin-top: 70px;
     .logo {
-        width: 185px;
+        max-width: 185px;
     }
     .title {
-        width: 500px;
-        height: 150px;
+        max-width: 700px;
         margin: 70px 0;
     }
 }
 
-button, 
+button,
 .button {
     height: 45px;
     width: 200px;
     border-radius: 7px;
     border: none;
     background-color: $faded-lime;
-    box-shadow: 0 5px 0 darken($faded-lime, 50%);
+    box-shadow: 0 5px 0 $green;
     margin: 0 15px;
-    color: $deep-ocean;
+    color: $blue-zodiac;
     font-family: $body-fonts;
     font-size: 1em;
     &.secondary {
@@ -137,16 +168,15 @@ button,
     &:active {
         box-shadow: none;
         transform: translateY(5px);
-    }    
+    }
     &:visited {
         box-shadow: none;
         transform: translateY(5px);
     }
-
 }
 
 .overlay {
-    background-color: $deep-ocean;
+    background-color: $blue-zodiac;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -170,21 +200,20 @@ button,
     width: 600px;
     height: auto;
     padding-bottom: 25px;
-    background-color: $deep-ocean;
+    background-color: $blue-zodiac;
     border-radius: 10px;
-    box-shadow: 0 5px 15px darken($deep-ocean, 75%);
+    box-shadow: 0 5px 15px darken($blue-zodiac, 75%);
     overflow: hidden;
     position: absolute;
     visibility: hidden;
     top: 35vh;
-    left: -2000;
+    left: -5000;
     right: 0;
     margin: auto;
     z-index: 10;
-
     #mc_embed_signup_scroll {
         width: 100%;
-        color: $deep-ocean;
+        color: $blue-zodiac;
     }
     .mailer-subscribe {
         float: left;
@@ -194,15 +223,13 @@ button,
         height: 70px;
         width: 100%;
         h2 {
-            @include title($display-fonts, inherit, 1.75em, $title-weight)
-            padding: 20px 0 35px 0;
+            @include title($display-fonts, inherit, 1.75em, $title-weight) padding: 20px 0 35px 0;
             width: 100%;
             color: $white;
             text-align: center;
             display: block;
         }
     }
-    
     .indicates-required {
         height: auto;
         text-align: right;
@@ -218,7 +245,6 @@ button,
         width: 100%;
         margin-bottom: 20px;
         color: $white;
-
         &.initial {
             padding-top: 25px;
         }
@@ -226,7 +252,6 @@ button,
             width: 500px;
             margin-left: 75px;
         }
-        
         input {
             height: 30px;
             width: 300px;
@@ -240,7 +265,6 @@ button,
             text-indent: 10px;
             color: $orchid;
         }
-
         @include placeholder {
             color: lighten($orchid, 25%);
             text-indent: 10px;
@@ -257,10 +281,40 @@ main {
     justify-content: center;
     text-align: center;
     div {
-        width: 35%;
+        width: 50%;
     }
 }
 
+@media screen and (max-width: 745px) {
+    .splash {
+        margin-top: 70px;
+        .logo {
+            width: 150px;
+        }
+        .title {
+            min-width: 350px;
+            margin: 70px 30px;
+        }
+    }
 
-@media screen and (max-width: 600px) {
+    main div {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    header .window {
+        margin: 0 15px;
+    }
+}
+
+@media screen and (max-width: 459px) {
+    .primary {
+        margin-top: 15px;
+    }
+
+    .splash .title {
+        margin: 30px;
+    }
+
 }
