--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -128,7 +128,7 @@ button,
   height: 100vh;
   width: 100%; }
   .overlay .close-button {
-    position: absolute;
+    position: fixed;
     top: 30px;
     right: 30px;
     height: 30px;
